[gd_scene load_steps=7 format=3 uid="uid://c1vpajhxlr42h"]

[ext_resource type="Script" path="res://src/scenes/UI/mainmenue.gd" id="1_d2d1a"]
[ext_resource type="Texture2D" uid="uid://bdk1mwdtb2fbb" path="res://resources/images/dog_town.png" id="2_xqd27"]
[ext_resource type="FontFile" uid="uid://yvflshvt4htr" path="res://resources/pixeltype.ttf" id="3_loocw"]
[ext_resource type="Texture2D" uid="uid://cfylpvf3jryuq" path="res://resources/images/doggooo.png" id="3_s66w7"]
[ext_resource type="AudioStream" uid="uid://dwcg8uoggpc8o" path="res://resources/sons/menu.ogg" id="5_4uxf2"]

[sub_resource type="GDScript" id="GDScript_dweky"]
script/source = "extends Button
"

[node name="Mainmenue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d2d1a")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0011
anchor_bottom = 0.998259
offset_right = -0.26709
offset_bottom = 1.12817
texture = ExtResource("2_xqd27")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -718.0
texture = ExtResource("3_s66w7")
stretch_mode = 5

[node name="Options" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.302
anchor_top = 0.684
anchor_right = 0.706
anchor_bottom = 0.858
offset_left = -0.840027
offset_top = 0.279968
offset_right = 0.47998
offset_bottom = 0.359985
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Options"
script = SubResource("GDScript_dweky")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 654.0
offset_top = 581.0
offset_right = -654.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 130.425)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_loocw")
theme_override_font_sizes/font_size = 135
text = "Start"

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 21.16)
layout_mode = 2

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 130.425)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_loocw")
theme_override_font_sizes/font_size = 135
text = "Quit"
script = SubResource("GDScript_dweky")

[node name="Menu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_4uxf2")

[connection signal="mouse_entered" from="Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
